src/test/deca/syntax/invalid/Unuary_nonValide.deca
// Description:
//    programme vide
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2023


{

	int a = 5;
	a = -a,a;

}

